src/styles/global.css
/* ... */
@layer components {
	/* Default styling */
	a,
	button,
	select {
		@apply cursor-pointer;
	}

	button,
	select {
		@apply font-montserrat;
	}

	a,
	button,
	main,
	ul {
		@apply outline-focus-outline outline-offset-2 focus-visible:outline-2;
	}

	/* Article Formatting */
	.format {
		@apply format-code:font-normal format-table:tabular-nums;
	}

	.format figure:not(:where([class~="not-format"], [class~="not-format"] *)) {
		@apply mx-auto;
	}

	.format figure > div.side-by-side-images {
		@apply mx-auto flex justify-center gap-x-4;
	}

	.format figure > div.side-by-side-images > * {
		@apply w-1/2;
	}

	.format figure > div.side-by-side-images picture img {
		@apply my-0;
	}

	/* Custom for the finances article */
	.format .money-table table tbody {
		@apply font-mono;
	}

	.label-icon {
		@apply text-primary-800 group-hover:text-primary-400 dark:group-hover:text-primary-300 transition-colors duration-75 dark:text-gray-300;
	}
}
/* ... */

